--- a/index.html
+++ b/index.html
@@ -201,8 +201,10 @@
         <p>© Hugo Lévêque</p>
     </footer>
     <!-- <div class="custom-cursor"></div> -->
-    <script src="node_modules/scrollmagic/scrollmagic/minified/ScrollMagic.min.js"></script>
-    <script src="node_modules/animejs/lib/anime.min.js"></script>
+    <!-- <script src="node_modules/scrollmagic/scrollmagic/minified/ScrollMagic.min.js"></script>
+    <script src="node_modules/animejs/lib/anime.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/animejs@3.2.1/lib/anime.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
     <script src="script.js"></script>
     <script src="loading-script.js"></script>
 </body>
